--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-0": "6.x",
+    "compression": "^1.6.2",
     "css-loader": "^0.23.1",
     "eslint": "^2.9.0",
     "eslint-plugin-babel": "^3.2.0",
     "eslint-plugin-react": "^5.0.1",
+    "express": "^4.14.0",
     "file-loader": "^0.9.0",
     "open-browser-webpack-plugin": "0.0.3",
     "react": "^15.4.1",
