--- a/package.json
+++ b/package.json
@@ -8,37 +8,12 @@
     "build-windows": "rimraf build && SET NODE_ENV=production & webpack --config webpack.config.prod.js"
   },
   "dependencies": {
-    "babel-core": "^6.7.7",
-    "babel-eslint": "^6.0.4",
-    "babel-loader": "^6.2.4",
-    "babel-plugin-react-transform": "^2.0.2",
-    "babel-plugin-transform-object-rest-spread": "^6.6.5",
-    "babel-plugin-transform-react-display-name": "^6.5.0",
-    "babel-polyfill": "^6.7.4",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-react": "^6.5.0",
-    "babel-preset-stage-0": "6.x",
-    "compression": "^1.6.2",
-    "css-loader": "^0.23.1",
-    "eslint": "^2.9.0",
-    "eslint-plugin-babel": "^3.2.0",
-    "eslint-plugin-react": "^5.0.1",
-    "express": "^4.14.0",
-    "file-loader": "^0.9.0",
-    "open-browser-webpack-plugin": "0.0.3",
     "react": "^15.4.1",
-    "react-addons-css-transition-group": "^15.0.2",
     "react-dom": "^15.4.1",
     "react-redux": "^5.0.0",
     "react-router": "^3.0.0",
     "react-router-redux": "^4.0.4",
-    "react-transform-catch-errors": "^1.0.2",
-    "react-transform-hmr": "^1.0.4",
-    "redbox-react": "^1.2.3",
-    "redux": "^3.5.2",
-    "rimraf": "^2.5.4",
-    "style-loader": "^0.13.1",
-    "url-loader": "^0.5.7"
+    "redux": "^3.5.2"
   },
   "keywords": [
     "react"
@@ -50,6 +25,31 @@
   "author": "Wuhan",
   "license": "MIT",
   "devDependencies": {
+    "react-addons-css-transition-group": "^15.0.2",
+    "rimraf": "^2.5.4",
+    "redbox-react": "^1.2.3",
+    "react-transform-catch-errors": "^1.0.2",
+    "react-transform-hmr": "^1.0.4",
+    "open-browser-webpack-plugin": "0.0.3",
+    "compression": "^1.6.2",
+    "express": "^4.14.0",
+    "css-loader": "^0.23.1",
+    "eslint": "^2.9.0",
+    "eslint-plugin-babel": "^3.2.0",
+    "eslint-plugin-react": "^5.0.1",
+    "file-loader": "^0.9.0",
+    "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7",
+    "babel-core": "^6.7.7",
+    "babel-eslint": "^6.0.4",
+    "babel-loader": "^6.2.4",
+    "babel-plugin-react-transform": "^2.0.2",
+    "babel-plugin-transform-object-rest-spread": "^6.6.5",
+    "babel-plugin-transform-react-display-name": "^6.5.0",
+    "babel-polyfill": "^6.7.4",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-0": "6.x",
     "extract-text-webpack-plugin": "^2.0.0",
     "html-webpack-plugin": "^2.24.1",
     "webpack": "^2.3.1",
