--- a/package.json
+++ b/package.json
@@ -1,58 +1,21 @@
 {
-  "name": "frontend",
-  "version": "0.0.1",
-  "main": "app/main.js",
-  "scripts": {
-    "start": "webpack-dev-server --config webpack.config.dev.js",
-    "build": "rimraf build && NODE_ENV=production webpack --config webpack.config.prod.js",
-    "build-windows": "rimraf build && SET NODE_ENV=production & webpack --config webpack.config.prod.js"
-  },
+  "name": "react-start-kit",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
-    "react-redux": "^5.0.3",
-    "react-router": "^4.0.0",
-    "react-router-redux": "^4.0.8",
-    "redux": "^3.6.0"
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4"
   },
-  "keywords": [
-    "react"
-  ],
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/GTyexing/react-start-kit"
-  },
-  "author": "Wuhan",
-  "license": "MIT",
   "devDependencies": {
-    "react-addons-css-transition-group": "^15.0.2",
-    "rimraf": "^2.5.4",
-    "redbox-react": "^1.2.3",
-    "react-transform-catch-errors": "^1.0.2",
-    "react-transform-hmr": "^1.0.4",
-    "open-browser-webpack-plugin": "0.0.3",
-    "compression": "^1.6.2",
-    "express": "^4.14.0",
-    "css-loader": "^0.23.1",
-    "eslint": "^2.9.0",
-    "eslint-plugin-babel": "^3.2.0",
-    "eslint-plugin-react": "^5.0.1",
-    "file-loader": "^0.9.0",
-    "style-loader": "^0.13.1",
-    "url-loader": "^0.5.7",
-    "babel-core": "^6.7.7",
-    "babel-eslint": "^6.0.4",
-    "babel-loader": "^6.2.4",
-    "babel-plugin-react-transform": "^2.0.2",
-    "babel-plugin-transform-object-rest-spread": "^6.6.5",
-    "babel-plugin-transform-react-display-name": "^6.5.0",
-    "babel-polyfill": "^6.7.4",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-react": "^6.5.0",
-    "babel-preset-stage-0": "6.x",
-    "extract-text-webpack-plugin": "^2.0.0",
-    "html-webpack-plugin": "^2.24.1",
-    "webpack": "^2.3.1",
-    "webpack-dev-server": "^2.4.2"
+    "eslint-config-airbnb": "^15.0.1",
+    "flow-bin": "^0.46.0",
+    "react-scripts": "1.0.5"
+  },
+  "scripts": {
+    "flow": "flow",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
   }
 }
